@@ -20,8 +20,10 @@ import org.springframework.transaction.annotation.Transactional;
 import com.scit45.kiminomenyuwa.domain.dto.StoreResponseDTO;
 import com.scit45.kiminomenyuwa.domain.entity.FavoriteEntity;
 import com.scit45.kiminomenyuwa.domain.entity.StoreEntity;
+import com.scit45.kiminomenyuwa.domain.entity.StorePhotoEntity;
 import com.scit45.kiminomenyuwa.domain.entity.UserEntity;
 import com.scit45.kiminomenyuwa.domain.repository.FavoriteRepository;
+import com.scit45.kiminomenyuwa.domain.repository.StorePhotoRepository;
 import com.scit45.kiminomenyuwa.domain.repository.StoreRepository;
 import com.scit45.kiminomenyuwa.domain.repository.UserRepository;
 
@@ -36,6 +38,7 @@ public class StoreSearchService {
 	private final UserRepository userRepository;
 	private final StoreRepository storeRepository;
 	private final FavoriteRepository favoriteRepository;
+	private final StorePhotoRepository storePhotoRepository;
 
 	/**
 	 * 특정 위치와 반경을 기준으로 주변 상점을 검색하고 DTO로 매핑합니다.
@@ -133,12 +136,21 @@ public class StoreSearchService {
 
 		// 찜한 상점 목록 조회
 		List<FavoriteEntity> favorites = favoriteRepository.findByUser(user);
-		List<StoreResponseDTO> favoritedStores = favorites.stream().map(f -> {
-			StoreResponseDTO dto = mapToDTO(f.getStore());
-			dto.setFavorited(true);
-			dto.setFavoritedTime(f.getCreatedAt());
-			return dto;
-		}).collect(Collectors.toList());
+		List<StoreResponseDTO> favoritedStores
+			= favorites.stream()
+			.map(f -> {
+				StoreResponseDTO dto = mapToDTO(f.getStore());
+				dto.setFavorited(true);
+				dto.setFavoritedTime(f.getCreatedAt());
+
+				dto.setPhotoUrls(storePhotoRepository.findAllByStoreStoreId(f.getStore().getStoreId())
+					.stream()
+					.map(StorePhotoEntity::getPhotoUrl).toList());
+
+				return dto;
+			})
+			.collect(Collectors.toList());
+
 
 		// 정렬 적용
 		switch (sortBy.toLowerCase()) {
